[gd_scene load_steps=23 format=3 uid="uid://cpv8tilnl7lli"]

[ext_resource type="Script" path="res://Characters/Enemy.gd" id="1_piv5o"]
[ext_resource type="PackedScene" uid="uid://cy12nf62sv60i" path="res://Debug/VectorCube.tscn" id="2_mlfi0"]
[ext_resource type="PackedScene" path="res://Props/Slapper.tscn" id="2_w6l2w"]
[ext_resource type="Script" path="res://SFX.gd" id="4_fow25"]
[ext_resource type="AudioStream" uid="uid://bgwvwcsm8gph8" path="res://Characters/footstep1.ogg" id="5_587yn"]
[ext_resource type="AudioStream" uid="uid://lgaf42ogngsv" path="res://Characters/Hurt1.ogg" id="5_nudx1"]
[ext_resource type="AudioStream" uid="uid://tevag2c1n34i" path="res://Characters/Hurt2.ogg" id="6_4a5j5"]
[ext_resource type="AudioStream" uid="uid://dxk5opjm6pasr" path="res://Characters/footstep2.ogg" id="6_178uj"]
[ext_resource type="AudioStream" uid="uid://dvwslqt03fwb6" path="res://Props/Slap.ogg" id="7_gwkte"]
[ext_resource type="AudioStream" uid="uid://b183f2nb6ap8c" path="res://Characters/footstep3.ogg" id="7_qgqgh"]
[ext_resource type="AudioStream" uid="uid://dyeb4uhsel3sb" path="res://Characters/footstep4.ogg" id="8_jtmmn"]
[ext_resource type="AudioStream" uid="uid://cxkp38ggphhnl" path="res://Characters/Death.ogg" id="8_sdjxy"]
[ext_resource type="PackedScene" path="res://Characters/NewCharacter.tscn" id="13_lqjeo"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7kyy2"]
resource_local_to_scene = true
albedo_color = Color(1, 0.568627, 0.537255, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ua1oe"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_7kyy2")
radius = 0.25
height = 0.5
radial_segments = 16
rings = 8

[sub_resource type="SphereMesh" id="SphereMesh_r4q6o"]
radius = 0.05
height = 0.1

[sub_resource type="SphereShape3D" id="SphereShape3D_ngx6b"]
radius = 0.30253

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5u12y"]
resource_local_to_scene = true
albedo_color = Color(1, 0.568627, 0.537255, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_nlv8a"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_5u12y")
radius = 0.25
height = 1.25
radial_segments = 16

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3vddd"]
resource_local_to_scene = true
radius = 0.251
height = 1.75

[sub_resource type="SphereShape3D" id="SphereShape3D_vrlk2"]
radius = 0.25

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4e5ow"]
radius = 0.25
height = 1.25

[node name="Enemy" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_piv5o")

[node name="NavAgent" type="NavigationAgent3D" parent="."]
agent_height_offset = 0.1

[node name="TargetLocation" type="Node3D" parent="NavAgent"]

[node name="PlayerSeen" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.45, 0)
visible = false
target_position = Vector3(0, 0, -1)
collision_mask = 5
collide_with_areas = true

[node name="VectorCube" parent="PlayerSeen" instance=ExtResource("2_mlfi0")]
visible = false

[node name="Head" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
mesh = SubResource("SphereMesh_ua1oe")
skeleton = NodePath("../../..")

[node name="Face" type="MeshInstance3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.211708)
mesh = SubResource("SphereMesh_r4q6o")
skeleton = NodePath("../..")

[node name="ViewHelper" type="Node3D" parent="Head"]

[node name="Slapper" parent="Head/ViewHelper" instance=ExtResource("2_w6l2w")]
transform = Transform3D(0.986551, -0.0607031, -0.151761, 0.00491707, 0.939081, -0.34366, 0.163377, 0.338292, 0.926751, 0.151, -0.148, -0.422)
visible = false
is_automatic = null

[node name="Camera3D" type="Camera3D" parent="Head/ViewHelper"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.25)
cull_mask = 1048569
near = 0.01

[node name="ShootCast" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.57628e-07, -0.25)
target_position = Vector3(0, 0, -100)
collision_mask = 5
hit_from_inside = true
collide_with_areas = true

[node name="VectorCube" parent="Head/ShootCast" instance=ExtResource("2_mlfi0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 46.7139, 0, 0, 0)
visible = false

[node name="SlapArea" type="Area3D" parent="Head"]
collision_layer = 8
collision_mask = 4
input_ray_pickable = false
monitorable = false

[node name="Collision" type="CollisionShape3D" parent="Head/SlapArea"]
transform = Transform3D(1, 0, 0, 0, 1, 1.49011e-08, 0, -1.49011e-08, 1, 0, -1.19209e-07, -0.674995)
shape = SubResource("SphereShape3D_ngx6b")

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.625, 0)
mesh = SubResource("CapsuleMesh_nlv8a")
skeleton = NodePath("../../..")

[node name="Face" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.349766, -0.211708)
mesh = SubResource("SphereMesh_r4q6o")
skeleton = NodePath("../..")

[node name="FindTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="CharacterCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.875, 0)
shape = SubResource("CapsuleShape3D_3vddd")

[node name="DamageCollision" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="HeadCollision" type="CollisionShape3D" parent="DamageCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("SphereShape3D_vrlk2")

[node name="BodyCollision" type="CollisionShape3D" parent="DamageCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.625, 0)
shape = SubResource("CapsuleShape3D_4e5ow")

[node name="WalkTimer" type="Timer" parent="."]
one_shot = true

[node name="WalkSFX" type="Node3D" parent="."]
script = ExtResource("4_fow25")

[node name="Walk1" type="AudioStreamPlayer3D" parent="WalkSFX"]
stream = ExtResource("5_587yn")
max_db = 0.0
pitch_scale = 0.85
max_distance = 5.0
bus = &"SFX"

[node name="Walk2" type="AudioStreamPlayer3D" parent="WalkSFX"]
stream = ExtResource("6_178uj")
max_db = 0.0
pitch_scale = 0.85
max_distance = 5.0
bus = &"SFX"

[node name="Walk3" type="AudioStreamPlayer3D" parent="WalkSFX"]
stream = ExtResource("7_qgqgh")
max_db = 0.0
pitch_scale = 0.85
max_distance = 5.0
bus = &"SFX"

[node name="Walk4" type="AudioStreamPlayer3D" parent="WalkSFX"]
stream = ExtResource("8_jtmmn")
max_db = 0.0
pitch_scale = 0.85
max_distance = 5.0
bus = &"SFX"

[node name="Slap" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_gwkte")
volume_db = 6.0
bus = &"SFX"

[node name="HurtSFX" type="Node3D" parent="."]
script = ExtResource("4_fow25")

[node name="Hurt1" type="AudioStreamPlayer3D" parent="HurtSFX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
stream = ExtResource("5_nudx1")
max_db = 0.0
max_distance = 20.0
bus = &"SFX"

[node name="Hurt2" type="AudioStreamPlayer3D" parent="HurtSFX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
stream = ExtResource("6_4a5j5")
max_db = 0.0
max_distance = 20.0
bus = &"SFX"

[node name="HurtTimer" type="Timer" parent="."]
one_shot = true

[node name="DeathSFX" type="Node3D" parent="."]
script = ExtResource("4_fow25")

[node name="Death1" type="AudioStreamPlayer3D" parent="DeathSFX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
stream = ExtResource("8_sdjxy")
max_db = 0.0
max_distance = 20.0
bus = &"SFX"

[node name="CharacterBody3d" parent="." instance=ExtResource("13_lqjeo")]
visible = false

[node name="Skeleton3D" parent="CharacterBody3d/PuppetAnimations" index="0"]
bones/1/position = Vector3(-6.04169e-09, 0.868785, -0.0641973)
bones/1/rotation = Quaternion(2.89313e-08, 0.987396, -0.15827, -1.92464e-07)
bones/2/rotation = Quaternion(-0.151396, 0.00136527, 0.00321162, 0.988467)
bones/4/rotation = Quaternion(0.0760456, 0.0120232, 0.0194922, 0.996841)
bones/5/rotation = Quaternion(-0.0397589, -0.00112578, -0.000212222, 0.999209)
bones/7/rotation = Quaternion(0.56407, -0.207202, -0.648729, 0.466952)
bones/8/rotation = Quaternion(0.327382, 0.0344103, -0.0637454, 0.942111)
bones/10/rotation = Quaternion(0.410884, 0.279187, 0.695927, 0.518569)
bones/11/rotation = Quaternion(0.527323, -0.0307857, 0.102677, 0.842876)
bones/12/position = Vector3(-0.0218639, 0.350078, 0.310042)
bones/12/rotation = Quaternion(-0.462285, -0.210077, -0.536213, 0.674266)
bones/15/rotation = Quaternion(-0.136752, -0.0311937, 0.100512, 0.984999)
bones/16/rotation = Quaternion(-0.352684, -0.0473181, -0.50171, 0.788455)
bones/21/rotation = Quaternion(0.00413199, -0.168782, -0.154747, 0.973421)
bones/22/rotation = Quaternion(-0.394365, 0.0948887, -0.480339, 0.777655)
bones/27/rotation = Quaternion(-0.105765, -0.0530162, -0.0569688, 0.991341)
bones/28/rotation = Quaternion(0.518952, 0.320994, -0.149722, 0.777969)
bones/29/rotation = Quaternion(0.458401, 0.231571, -0.199181, 0.834608)
bones/30/position = Vector3(-0.0500625, 0.359343, 0.302953)
bones/30/rotation = Quaternion(-0.470055, 0.0686352, 0.468788, 0.744698)
bones/33/rotation = Quaternion(-0.244851, 0.183849, 0.0430019, 0.950999)
bones/34/rotation = Quaternion(-0.38701, -0.00258387, 0.473995, 0.790914)
bones/39/rotation = Quaternion(-0.0280185, 0.194239, 0.268623, 0.943042)
bones/40/rotation = Quaternion(-0.46123, -0.0717648, 0.471175, 0.748405)
bones/45/rotation = Quaternion(-0.209561, -0.246504, 0.40331, 0.855956)
bones/46/rotation = Quaternion(-0.194091, -0.577635, 0.792879, -0.00300778)
bones/47/rotation = Quaternion(0.127985, 0.40581, -0.750663, 0.505414)
bones/49/rotation = Quaternion(-0.48396, -0.0719297, -0.430804, 0.758299)
bones/50/rotation = Quaternion(-0.0223911, 0.00391447, 0.0343061, 0.999153)
bones/52/rotation = Quaternion(-0.524742, -0.153136, 0.204696, 0.81197)
bones/53/rotation = Quaternion(-0.390503, -0.00274079, -0.598286, 0.699682)
bones/54/position = Vector3(-0.11946, 0.129968, -0.412134)
bones/54/rotation = Quaternion(0.721794, -0.194343, -0.631462, 0.206157)
bones/56/rotation = Quaternion(0.14646, -0.0421657, -0.533952, 0.831665)
bones/60/position = Vector3(-0.324582, 0.962178, -0.428659)
bones/60/rotation = Quaternion(0.565929, -0.423939, -0.423939, 0.565929)
bones/61/position = Vector3(0.122538, 0.497732, 0.365641)
bones/61/rotation = Quaternion(0.0294618, 0.626785, 0.0185754, 0.778414)
bones/63/rotation = Quaternion(-0.0833607, -0.00721522, -0.176268, 0.98078)
bones/67/position = Vector3(0.177047, 0.971755, -0.536806)
bones/67/rotation = Quaternion(0.565929, 0.423939, 0.423939, 0.565929)

[node name="Pistol" parent="CharacterBody3d" index="5"]
transform = Transform3D(0.999809, 0, 0, 0, 0.999704, 0, 0, 0, 0.999818, 0.0482904, 1.3808, -0.480773)
is_automatic = null

[connection signal="target_reached" from="NavAgent" to="." method="_target_reached"]
[connection signal="slap" from="Head/ViewHelper/Slapper" to="." method="_slap"]
[connection signal="timeout" from="FindTimer" to="." method="switch_goal"]

[editable path="CharacterBody3d"]
[editable path="CharacterBody3d/PuppetAnimations"]
